ops/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-repo-deployment
  labels:
    app: data-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-repo
  template:
    metadata:
      labels:
        app: data-repo
    spec:
      containers:
      - name: data-repo-api-container
        image: gcr.io/broad-jade-dev/jade-data-repo:beb3177
