ops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: data-repo
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
